[ADD] Added file explorer implementation

--- a/CodeEditor.Views/CodeEditor.Views.csproj
+++ b/CodeEditor.Views/CodeEditor.Views.csproj
@@ -20,7 +20,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Resourses\" />
+      <None Remove="Resources\back-button.png" />
+      <Resource Include="Resources\back-button.png" />
+      <None Remove="Resources\up-arrow-button.png" />
+      <Resource Include="Resources\up-arrow-button.png" />
     </ItemGroup>
 
 </Project>
