--- a/CodeEditor.Core/CodeEditor.Core.csproj
+++ b/CodeEditor.Core/CodeEditor.Core.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AvalonEdit" Version="6.3.1.120" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
     </ItemGroup>
 
